Incluyendo todas las estadisticas de todos los plenos

--- a/partidos/ciudadanos.html
+++ b/partidos/ciudadanos.html
@@ -95,7 +95,7 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
 
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que Ciudadanos ha votado en contra del resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que <strong>Ciudadanos</strong> ha votado en contra del resto de partidos.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-en-contra"></canvas>
@@ -106,7 +106,7 @@
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">VOTANDO A FAVOR
             </h2>
-            <span class="partidos-grafico-ciudadanos"></span>
+            <span class="partidos-grafico-<strong>ciudadanos</strong>"></span>
 
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que Ciudadanos ha votado a favor del resto de partidos.</p>
         </div>
