--- a/partidos/zec.html
+++ b/partidos/zec.html
@@ -39,16 +39,15 @@
             <p class="partidos-cabecera-texto maw-50">En esta legislatura ha presentado 43 mociones. Estas mociones han dado como resultado 65 votaciones. Al ser el partido que gobierna solamente puede presentar 2 mociones por pleno.</p>
             <span class="partidos-concejales"><strong>Concejales:</strong></span>
             <ol>
-                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/jorge-azcon.htm">D. Jorge Antonio Azcón Navarro.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/cavero-moreno.htm">Dª. Patricia María Cavero Moreno.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/campillo-castells.htm">Dª. María de los Reyes Campillo Castells.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/pedro-navarro.htm">D. Pedro Navarro López.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/sebastian-contin.htm">D. Sebastián Contín Trillo-Figueroa.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/mjesus-martinez.htm">Dª. María Jesús Martínez del Campo.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/angel-loren.htm">D. Ángel Carlos Lorén Villa.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/maria-navarro.htm">Dª. María Navarro Viscasillas.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/enrique-collados.htm">D. Luis Enrique Collados Mateo.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/jose-senao.htm">D. José Ignacio Senao Gómez.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="">D. Jorge Antonio Azcón Navarro.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="">Dª. Patricia María Cavero Moreno.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="">Dª. María de los Reyes Campillo Castells.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="">D. Pedro Navarro López.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="">D. Sebastián Contín Trillo-Figueroa.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="">Dª. María Jesús Martínez del Campo.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="">D. Ángel Carlos Lorén Villa.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="">Dª. María Navarro Viscasillas.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="">D. Luis Enrique Collados Mateo.</a></li>
             </ol>
         </div>
         <div class="partidos-cabecera-dcha">
@@ -93,7 +92,7 @@
             <h2 class="partidos-grafico-titulo">VOTANDO EN CONTRA
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que Zaragoza En Común ha votado en contra del resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que <strong>Zaragoza En Común</strong> ha votado en contra del resto de partidos.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-en-contra"></canvas>
@@ -104,7 +103,7 @@
             <h2 class="partidos-grafico-titulo">VOTANDO A FAVOR
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que Zaragoza En Común ha votado a favor del resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que <strong>Zaragoza En Común</strong> ha votado a favor del resto de partidos.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-a-favor"></canvas>
