--- a/partidos/pp.html
+++ b/partidos/pp.html
@@ -61,6 +61,10 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado en su contra el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 56 veces en contra.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 28 veces en contra.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 5 veces en contra.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado 42 veces en contra.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="en-contra"></canvas>
@@ -72,6 +76,10 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado a su favor el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 4 veces a su favor.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 33 veces a su favor.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 54 veces a su favor.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado 13 veces a su favor.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="a-favor"></canvas>
@@ -83,6 +91,10 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces se han abstenido el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha optado por la abstención en 12 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha optado por la abstención en 12 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha optado por la abstención en 14 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha optado por la abstención en 18 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="abstencion"></canvas>
@@ -94,6 +106,10 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el <strong>Partido Popular</strong> ha votado en contra del resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado en contra de <strong>Zaragoza En Común</strong> en 38 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado en contra del <strong>Partido Socialista Obrero Español</strong> en 16 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado en contra de <strong>Ciudadanos</strong> en 14 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado en contra de <strong>Chunta Aragonesista</strong> en 29 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-en-contra"></canvas>
@@ -105,6 +121,10 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el <strong>Partido Popular</strong> ha votado a favor del resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado a favor de <strong>Zaragoza En Común</strong> en 3 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado a favor del <strong>Partido Socialista Obrero Español</strong> en 38 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado a favor de <strong>Ciudadanos</strong> en 26 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado a favor de <strong>Chunta Aragonesista</strong> en 5 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-a-favor"></canvas>
@@ -117,7 +137,7 @@
             <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
             <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GitHub</a>
         </div>
-        <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - 2016 · 2018</p>
+        <p class="maw-60 padding-1-0 luckyPoint">© 2018 - Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a></p>
         <a class="maw-60 display-b" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
 
     <img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><span class="maw-60 display-b">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
