paginas de partidos

--- a/partidos/psoe.html
+++ b/partidos/psoe.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
     </header>
-    <section class="partidos-cabecera bgc-pp">
+    <section class="partidos-cabecera bgc-psoe">
         <div class="partidos-cabecera-izda">
             <h3 class="partidos-cabecera-title">PSOE</h3>
             <p class="partidos-cabecera-texto maw-50">En esta legislatura ha presentado 75 mociones. Estas mociones han dado como resultado 127 votaciones.</p>
@@ -51,56 +51,78 @@
             <canvas id="historico"></canvas>
         </div>
     </section>
-    <section class="partidos-grafico partidos-grafico-pp">
+    <section class="partidos-grafico partidos-grafico-psoe">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado en su contra el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 16 veces en contra.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 23 veces en contra.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 6 veces en contra.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado 9 veces en contra.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="en-contra"></canvas>
         </div>
     </section>
-    <section class="partidos-grafico grafico-a-favor partidos-grafico-pp">
+    <section class="partidos-grafico grafico-a-favor partidos-grafico-psoe">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A FAVOR?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado a su favor el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 38 veces a su favor.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 19 veces a su favor.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 47 veces a su favor.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado 43 veces a su favor.</p>
+
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="a-favor"></canvas>
         </div>
     </section>
-    <section class="partidos-grafico grafico-abstencion partidos-grafico-pp">
+    <section class="partidos-grafico grafico-abstencion partidos-grafico-psoe">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">¿QUIÉN SE ABSTIENE?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces se han abstenido el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha optado por la abstención en 6 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha optado por la abstención en 18 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha optado por la abstención en 7 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha optado por la abstención en 7 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="abstencion"></canvas>
         </div>
     </section>
-    <section class="partidos-grafico grafico-abstencion partidos-grafico-pp">
+    <section class="partidos-grafico grafico-abstencion partidos-grafico-psoe">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">VOTANDO EN CONTRA
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el <strong>PSOE</strong> ha votado en contra del resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado en contra del <strong>Partido Popular</strong> en 28 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado en contra de <strong>Zaragoza En Común</strong> en 10 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado en contra de <strong>Ciudadanos</strong> en 4 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado en contra de <strong>Chunta Aragonesista</strong> en 6 ocasiones.</p>
+
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-en-contra"></canvas>
         </div>
     </section>
-    <section class="partidos-grafico grafico-abstencion partidos-grafico-pp">
+    <section class="partidos-grafico grafico-abstencion partidos-grafico-psoe">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">VOTANDO A FAVOR
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el <strong>PSOE</strong> ha votado a favor del resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado a favor del <strong>Partido Popular</strong> en 28 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado a favor de <strong>Zaragoza En Común</strong> en 10 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado a favor de <strong>Ciudadanos</strong> en 4 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado a favor de <strong>Chunta Aragonesista</strong> en 6 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-a-favor"></canvas>
@@ -122,7 +144,7 @@
     </footer>
     <script type="text/javascript" src="../js/Chart.min.js"></script>
     <script type="text/javascript" src="../js/chartjs-plugin-datalabels.min.js"></script>
-    <script type="text/javascript" src="../js/pp.js"></script>
+    <script type="text/javascript" src="../js/psoe.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
