--- a/partidos/cha.html
+++ b/partidos/cha.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
     </header>
-    <section class="partidos-cabecera bgc-pp">
+    <section class="partidos-cabecera bgc-cha">
         <div class="partidos-cabecera-izda">
             <h3 class="partidos-cabecera-title">CHA</h3>
             <p class="partidos-cabecera-texto maw-50">En esta legislatura ha presentado 63 mociones. Estas mociones han dado como resultado 93 votaciones.</p>
@@ -45,58 +45,79 @@
         </div>
         <div class="partidos-cabecera-dcha">
             <canvas id="historico"></canvas>
+            <p class="partidos-cabecera-texto-derecha">Concurrió por primera vez a unas elecciones en 1987.</p>
         </div>
     </section>
-    <section class="partidos-grafico partidos-grafico-pp">
+    <section class="partidos-grafico partidos-grafico-cha">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado en su contra el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 29 veces en contra.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 6 veces en contra.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 6 veces en contra.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 13 veces en contra.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="en-contra"></canvas>
         </div>
     </section>
-    <section class="partidos-grafico grafico-a-favor partidos-grafico-pp">
+    <section class="partidos-grafico grafico-a-favor partidos-grafico-cha">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A FAVOR?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado a su favor el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 5 veces a su favor.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 42 veces a su favor.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 40 veces a su favor.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 27 veces a su favor.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="a-favor"></canvas>
         </div>
     </section>
-    <section class="partidos-grafico grafico-abstencion partidos-grafico-pp">
+    <section class="partidos-grafico grafico-abstencion partidos-grafico-cha">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">¿QUIÉN SE ABSTIENE?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces se han abstenido el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha optado por la abstención en 17 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha optado por la abstención en 3 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha optado por la abstención en 5 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha optado por la abstención en 11 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="abstencion"></canvas>
         </div>
     </section>
-    <section class="partidos-grafico grafico-abstencion partidos-grafico-pp">
+    <section class="partidos-grafico grafico-abstencion partidos-grafico-cha">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">VOTANDO EN CONTRA
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el <strong>Chunta Aragonesista</strong> ha votado en contra del resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en contra del <strong>Partido Popular</strong> en 42 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> nunca ha votado en contra de <strong>Zaragoza En Común</strong>.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en contra del <strong>Partido Socialista Obrero Español</strong> en 9 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en contra de <strong>Chunta Aragonesista</strong> en 12 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-en-contra"></canvas>
         </div>
     </section>
-    <section class="partidos-grafico grafico-abstencion partidos-grafico-pp">
+    <section class="partidos-grafico grafico-abstencion partidos-grafico-cha">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">VOTANDO A FAVOR
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el <strong>Chunta Aragonesista</strong> ha votado a favor del resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor del <strong>Partido Popular</strong> en 13 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor de <strong>Zaragoza En Común</strong> en 43 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor del <strong>Partido Socialista Obrero Español</strong> en 43 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor de <strong>Chunta Aragonesista</strong> en 14 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-a-favor"></canvas>
@@ -118,7 +139,7 @@
     </footer>
     <script type="text/javascript" src="../js/Chart.min.js"></script>
     <script type="text/javascript" src="../js/chartjs-plugin-datalabels.min.js"></script>
-    <script type="text/javascript" src="../js/pp.js"></script>
+    <script type="text/javascript" src="../js/cha.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
