incluyendo nombres y enlaces de los concejales que quedaban

--- a/partidos/cha.html
+++ b/partidos/cha.html
@@ -39,8 +39,8 @@
             <p class="partidos-cabecera-texto maw-50">En esta legislatura ha presentado 63 mociones. Estas mociones han dado como resultado 93 votaciones.</p>
             <span class="partidos-concejales"><strong>Concejales:</strong></span>
             <ol>
-                <li class="partido-concejales-lista"><a target="_blank" href="">D. Jorge Antonio Azcón Navarro.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="">Dª. Patricia María Cavero Moreno.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/carmelo-asensio.htm">D. Carmelo Javier Asensio Bueno</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/leticia-crespo.htm">Dª Leticia Crespo Mir</a></li>
             </ol>
         </div>
         <div class="partidos-cabecera-dcha">
