--- a/partidos/zec.html
+++ b/partidos/zec.html
@@ -39,15 +39,15 @@
             <p class="partidos-cabecera-texto maw-50">En esta legislatura ha presentado 43 mociones. Estas mociones han dado como resultado 65 votaciones. Al ser el partido que gobierna solamente puede presentar 2 mociones por pleno.</p>
             <span class="partidos-concejales"><strong>Concejales:</strong></span>
             <ol>
-                <li class="partido-concejales-lista"><a target="_blank" href="">D. Jorge Antonio Azcón Navarro.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="">Dª. Patricia María Cavero Moreno.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="">Dª. María de los Reyes Campillo Castells.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="">D. Pedro Navarro López.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="">D. Sebastián Contín Trillo-Figueroa.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="">Dª. María Jesús Martínez del Campo.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="">D. Ángel Carlos Lorén Villa.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="">Dª. María Navarro Viscasillas.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="">D. Luis Enrique Collados Mateo.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/pedro-santisteve.htm">D. Pedro Santisteve Roche.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/luisa-broto.htm">Dª. María Luisa Broto Bernués.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/pablo-munoz.htm">D. Pablo Muñoz San Pío</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/arantza-gracia.htm">Dª. Arantzazu Gracia Moreno</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/alberto-cubero.htm">D. Alberto Cubero Serrano.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/elena-giner.htm">Dª. Elena Giner Monge</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/fernando-rivares.htm">D. Fernando Rivarés Esco.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/teresa-artigas.htm">Dª. Teresa Ana Artigas Sanz.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/pablo-hijar.htm">D. Pablo Hijar Bayarte.</a></li>
             </ol>
         </div>
         <div class="partidos-cabecera-dcha">
