--- a/partidos/psoe.html
+++ b/partidos/psoe.html
@@ -39,12 +39,12 @@
             <p class="partidos-cabecera-texto maw-50">En esta legislatura ha presentado 75 mociones. Estas mociones han dado como resultado 127 votaciones.</p>
             <span class="partidos-concejales"><strong>Concejales:</strong></span>
             <ol>
-                <li class="partido-concejales-lista"><a target="_blank" href="">D. Jorge Antonio Azcón Navarro.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="">Dª. Patricia María Cavero Moreno.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="">Dª. María de los Reyes Campillo Castells.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="">D. Pedro Navarro López.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="">D. Sebastián Contín Trillo-Figueroa.</a></li>
-                <li class="partido-concejales-lista"><a target="_blank" href="">Dª. María Jesús Martínez del Campo.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/perez-anadon.htm">D. Carlos Pérez Anadón</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/sainz-varanda.htm">Dª. Marta Aparicio Sainz de Varanda.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/francisco-trivez.htm">D. Francisco Javier Trívez Bielsa.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/dolores-ranera.htm">Dª. María Dolores Ranera Gómez.</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/roberto-fernandez.htm">D. Roberto Fernández García</a></li>
+                <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/dolores-campos.htm">Dª. María Dolores Campos Palacio.</a></li>
             </ol>
         </div>
         <div class="partidos-cabecera-dcha">
