--- a/partidos/ciudadanos.html
+++ b/partidos/ciudadanos.html
@@ -31,6 +31,7 @@
             </div>
             <div class="nav-grid-second display-n display-ib--m">
                 <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline bislai-color vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
+<a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline bislai-color vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/partidos">PARTIDOS</a>
             </div>
         </nav>
     </header>
