ajustando las estadisticas a los ultimos plenos

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -58,6 +57,7 @@
     </div>
     <section class="border-t1 padding-1 border-b1 grey borderc-grey padding-4-0--l mih-100">
         <h2 class="maw-60 margin-b2 font-bislai tabs-title">CALENDARIO DE PLENOS</h2>
+        <p class="maw-60 margin-t1 margin-b2">Este calendario recoge todas las <strong>mociones ordinarias</strong> que se han presentado desde 2015 en el pleno del Ayuntamiento de Zaragoza.</p>
         <article class="maw-60">
             <input class="input-record" id="tab1" type="radio" name="tabs" checked>
             <label class="label-record font-3 font-s" for="tab1">2015</label>
