--- a/estadisticas.html
+++ b/estadisticas.html
@@ -28,7 +28,8 @@
             <span class="bislai-home-body-left-text-white font-bislai">ESTADÍSTICAS ACUMULADAS</span>
         </div>
         <div class="bislai-home-body-right">
-            <p class="font-1 margin-t1 bislai-home-body-right-text">Esta serie de estadísticas se han hecho a partir de las <span class="font-w8">mociones ordinarias</span> presentadas en el pleno del Ayuntamiento de Zaragoza desde el <strong>15 de junio de 2015 hasta el 14 de diciembre de 2017</strong>. En algunas mociones se votan diferentes puntos, así que las <span class="font-w8">estadísticas se han obtenido de la suma de todas las votaciones</span>.</p>
+            <p class="font-1 margin-t1 bislai-home-body-right-text">Esta serie de estadísticas se han hecho a partir de las <span class="font-w8">mociones ordinarias</span> presentadas en el pleno del Ayuntamiento de Zaragoza desde el <strong>15 de junio de 2015 hasta el 22 de diciembre de 2017</strong>. En algunas mociones se votan diferentes puntos, así que las <span class="font-w8">estadísticas se han obtenido de la suma de todas las votaciones</span>.</p>
+            <p class="font-1 margin-t1 bislai-home-body-right-text">En la estadistica de votación a favor no se tiene en cuenta cuando un grupo vota a favor de su propia propuesta.</p>
             <p>Por acuerdo de la junta de portavoces, cada grupo de la oposición puede presentar <strong>4 mociones</strong> por pleno y Zaragoza En Común, como gobierno, <strong>solamente 2</strong>.</p>
         </div>
     </div>
@@ -45,23 +46,23 @@
             <div class='step' data-step='2'>
                 <p class="title-estadisticas">Los tripartitos del pleno</p>
                 <p>El <span class="font-w8">tripartito</span> es una expresión que se ha utilizado asiduamente en <span class="font-w8">Zaragoza</span> a lo largo de los años.</p>
-                <p>El tripartito compuesto por <span class="font-w8">PP, PSOE y C'S</span> se alza con el primer puesto con un <span class="font-w8"> 11.31%</span></p> <p>En segundo lugar el tripartito compuesto por <span class="font-w8">ZEC, PSOE y CHA</span> con <span class="font-w8">10.58%</span>.</p>
+                <p>El tripartito compuesto por <span class="font-w8">PP, PSOE y C'S</span> se alza con el primer puesto con un <span class="font-w8"> 55 votaciones.</span></p> <p>En segundo lugar el tripartito compuesto por <span class="font-w8">ZEC, PSOE y CHA</span> con <span class="font-w8">53 votaciones</span>.</p>
             </div>
             <div class='step' data-step='3'>
                 <p class="title-estadisticas">¿Quién ha presentado más mociones?</p>
-                <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 274 mociones</span>.</p><p> El primer lugar es para el <span class="font-w8">PSOE</span> con 50 mociones presentadas. </p><p> En segundo lugar el <span class="font-w8">PP</span> con <span class="font-w8">47</span></p><p> En tercer lugar <span class="font-w8">C'S</span> con <span class="font-w8">44</span></p><p> En cuarto lugar esta <span class="font-w8">CHA</span> con <span class="font-w8">36</span>.</p><p> Y en quinto lugar esta <span class="font-w8">ZEC</span> con <span class="font-w8">28</span>.</p>
+                <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 323 mociones, y se han retirado 30.</span>.</p><p> El primer lugar es para <span class="font-w8">C'S</span> con <span class="font-w8">76</span>.</p><p> En segundo lugar el <span class="font-w8">PSOE</span> con <span class="font-w8">75</span>.</p><p> En tercer lugar el <span class="font-w8">PP</span> con <span class="font-w8">74</span>.</p><p> En cuarto lugar esta <span class="font-w8">CHA</span> con <span class="font-w8">63</span>.</p><p> Y en quinto lugar esta <span class="font-w8">ZEC</span> con <span class="font-w8">43</span>.</p>
             </div>
             <div class='step' data-step='4'>
                 <p class="title-estadisticas">¿Quién se ha abstenido más?</p>
-                <p>La abstención la lideran <span class="font-w8">ZEC</span> y <span class="font-w8">CHA.</span></p><p>En tercer lugar esta <span class="font-w8">C'S</span>.</p><p> En cuarto lugar <span class="font-w8">PP</span>.</p><p> Y en quinto lugar el <span class="font-w8">PSOE</span>.</p>
+                <p>La abstención la lidera<span class="font-w8">ZEC</span> con 56.</span></p><p>El segundo lugar es para <span class="font-w8">C'S</span> con 45 ocasiones.<p>En tercer lugar esta <span class="font-w8">CHA</span> con 44.</p><p> En cuarto lugar es para el <span class="font-w8">PP</span> con 37.</p><p> Y en último lugar el <span class="font-w8">PSOE</span> con 24.</p>
             </div>
             <div class='step' data-step='5'>
                 <p class="title-estadisticas">¿Quién vota más en contra?</p>
-                <p>En primer lugar <span class="font-w8">ZEC</span>, que ha optado por el voto en contra en el 24% de las votaciones.</p><p> En segundo lugar el <span class="font-w8">PP</span> con un 19%.</p> <p>El tercer lugar es para <span class="font-w8">CHA</span> con el 15%.</p><p> En cuarto lugar esta el <span class="font-w8">PSOE</span> con un 11%.</p><p> Y el quinto lugar es para <span class="font-w8">C'S</span> con el 8%.</p>
+                <p>En primer lugar <span class="font-w8">ZEC</span> con 98.</p><p> En segundo lugar el <span class="font-w8">PP</span> con 93.</p> <p>El tercer lugar es para <span class="font-w8">CHA</span> con 63.</p><p> En cuarto lugar esta el <span class="font-w8">PSOE</span> con 48.</p><p> Y el quinto lugar es para <span class="font-w8">C'S</span> con 38.</p>
             </div>
             <div class='step' data-step='6'>
                 <p class="title-estadisticas">¿Quién vota más a favor?</p>
-                <p>En primer lugar el <span class="font-w8">PSOE</span>, que ha optado por el voto a favor en el 46% de las votaciones.</p><p> En segundo lugar esta <span class="font-w8">C'S</span> con un 45%.</p><p> El tercer lugar es para <span class="font-w8">CHA</span> con el 36%.</p><p> En penúltimo lugar esta el <span class="font-w8">PP</span> con un 35%.</p><p> Y en qiunto lugar <span class="font-w8">ZEC</span> con el 28%.</p>
+                <p>En primer lugar <span class="font-w8">C'S</span>con 149.</p><p> En segundo lugar esta el <span class="font-w8">PSOE</span> con 143.</p><p> El tercer lugar es para <span class="font-w8">CHA</span> con 113.</p><p> En CUARTO lugar esta el <span class="font-w8">PP</span> con 96.</p><p> Y en quinto lugar <span class="font-w8">ZEC</span> con 77.</p>
             </div>
         </div>
     </section>
