--- a/estadisticas.html
+++ b/estadisticas.html
@@ -19,7 +19,7 @@
             </a>
                 <div class="nav-grid-second display-n display-ib--m">
                     <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline white vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
-                    <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline bislai-color vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/partidos">PARTIDOS</a>
+                    <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline white vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/partidos">PARTIDOS</a>
                 </div>
             </nav>
         </header>
@@ -39,7 +39,7 @@
         </div>
         <div class='scroll__text'>
             <div class='step' data-step='1'>
-                <p class="title-estadisticas"> ¿Cuantas mociones se han votado por unanimidad?</p>
+                <p class="title-estadisticas">¿Cuántas votaciones por unanimidad?</p>
 
                 <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">274 votaciones</span>, de las cuales un <span class="font-w8">37.59%</span> se han votado por unanimidad.</p>
             </div>
@@ -50,19 +50,23 @@
             </div>
             <div class='step' data-step='3'>
                 <p class="title-estadisticas">¿Quién ha presentado más mociones?</p>
-                <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 323 mociones, y se han retirado 30.</span>.</p><p> El primer lugar es para <span class="font-w8">C'S</span> con <span class="font-w8">76</span>.</p><p> En segundo lugar el <span class="font-w8">PSOE</span> con <span class="font-w8">75</span>.</p><p> En tercer lugar el <span class="font-w8">PP</span> con <span class="font-w8">74</span>.</p><p> En cuarto lugar esta <span class="font-w8">CHA</span> con <span class="font-w8">63</span>.</p><p> Y en quinto lugar esta <span class="font-w8">ZEC</span> con <span class="font-w8">43</span>.</p>
+                <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 323 mociones, y se han retirado 30.</span></p><p> En primer lugar <span class="font-w8">C'S</span> con <span class="font-w8">76</span>.</p><p> En segundo lugar el <span class="font-w8">PSOE</span> con <span class="font-w8">75</span>.</p><p> En tercer lugar el <span class="font-w8">PP</span> con <span class="font-w8">74</span>.</p><p> En cuarto lugar <span class="font-w8">CHA</span> con <span class="font-w8">63</span>.</p><p> En quinto lugar  <span class="font-w8">ZEC</span> con <span class="font-w8">43</span>.</p>
             </div>
             <div class='step' data-step='4'>
                 <p class="title-estadisticas">¿Quién se ha abstenido más?</p>
-                <p>La abstención la lidera<span class="font-w8">ZEC</span> con 56.</span></p><p>El segundo lugar es para <span class="font-w8">C'S</span> con 45 ocasiones.<p>En tercer lugar esta <span class="font-w8">CHA</span> con 44.</p><p> En cuarto lugar es para el <span class="font-w8">PP</span> con 37.</p><p> Y en último lugar el <span class="font-w8">PSOE</span> con 24.</p>
+                <p>La abstención la lidera <span class="font-w8">ZEC</span> con 56.</span></p><p>En segundo lugar es para <span class="font-w8">C'S</span> con 45.<p>En tercer lugar <span class="font-w8">CHA</span> con 44.</p><p> En cuarto lugar es para el <span class="font-w8">PP</span> con 37.</p><p> En quinto lugar el <span class="font-w8">PSOE</span> con 24.</p>
             </div>
             <div class='step' data-step='5'>
                 <p class="title-estadisticas">¿Quién vota más en contra?</p>
-                <p>En primer lugar <span class="font-w8">ZEC</span> con 98.</p><p> En segundo lugar el <span class="font-w8">PP</span> con 93.</p> <p>El tercer lugar es para <span class="font-w8">CHA</span> con 63.</p><p> En cuarto lugar esta el <span class="font-w8">PSOE</span> con 48.</p><p> Y el quinto lugar es para <span class="font-w8">C'S</span> con 38.</p>
+                <p>En primer lugar <span class="font-w8">ZEC</span> con 98.</p><p> En segundo lugar el <span class="font-w8">PP</span> con 93.</p> <p>En tercer lugar <span class="font-w8">CHA</span> con 63.</p><p> En cuarto lugar el <span class="font-w8">PSOE</span> con 48.</p><p> En quinto lugar <span class="font-w8">C'S</span> con 38.</p>
             </div>
             <div class='step' data-step='6'>
                 <p class="title-estadisticas">¿Quién vota más a favor?</p>
-                <p>En primer lugar <span class="font-w8">C'S</span>con 149.</p><p> En segundo lugar esta el <span class="font-w8">PSOE</span> con 143.</p><p> El tercer lugar es para <span class="font-w8">CHA</span> con 113.</p><p> En CUARTO lugar esta el <span class="font-w8">PP</span> con 96.</p><p> Y en quinto lugar <span class="font-w8">ZEC</span> con 77.</p>
+                <p>En primer lugar <span class="font-w8">C'S</span> con 149.</p><p> En segundo lugar el <span class="font-w8">PSOE</span> con 143.</p><p> En tercer lugar <span class="font-w8">CHA</span> con 113.</p><p> En cuarto lugar el <span class="font-w8">PP</span> con 96.</p><p> En quinto lugar <span class="font-w8">ZEC</span> con 77.</p>
+            </div>
+            <div class='step' data-step='7'>
+                <p class="title-estadisticas">La soledad del pleno</p>
+                <p>En primer lugar el <span class="font-w8">PP</span> con 101.</p><p> En segundo lugar <span class="font-w8">ZEC</span> con 72.</p><p> En tercer lugar <span class="font-w8">C'S</span> con 50.</p><p> En cuarto lugar <span class="font-w8">CHA</span> con 96.</p><p> En quinto lugar el <span class="font-w8">PSOE</span> con 16.</p>
             </div>
         </div>
     </section>
