--- a/estadisticas.html
+++ b/estadisticas.html
@@ -28,7 +28,7 @@
             <span class="bislai-home-body-left-text-white font-bislai">ESTADÍSTICAS ACUMULADAS</span>
         </div>
         <div class="bislai-home-body-right">
-            <p class="font-1 margin-t1 bislai-home-body-right-text">Esta serie de estadísticas se han hecho a partir de las <span class="font-w8">mociones ordinarias</span> presentadas en el pleno del Ayuntamiento de Zaragoza desde el <strong>15 de junio de 2015 hasta el 22 de diciembre de 2017</strong>. En algunas mociones se votan diferentes puntos, así que las <span class="font-w8">estadísticas se han obtenido de la suma de todas las votaciones</span>.</p>
+            <p class="font-1 margin-t1 bislai-home-body-right-text">Esta serie de estadísticas se han hecho a partir de las <span class="font-w8">mociones ordinarias</span> presentadas en el pleno del Ayuntamiento de Zaragoza, desde el <strong>15 de junio de 2015 hasta el 22 de diciembre de 2017</strong>. En algunas mociones se votan diferentes puntos, así que las <span class="font-w8">estadísticas se han obtenido de la suma de todas las votaciones</span>.</p>
             <p class="font-1 margin-t1 bislai-home-body-right-text">En la estadistica de votación a favor no se tiene en cuenta cuando un grupo vota a favor de su propia propuesta.</p>
             <p>Por acuerdo de la junta de portavoces, cada grupo de la oposición puede presentar <strong>4 mociones</strong> por pleno y Zaragoza En Común, como gobierno, <strong>solamente 2</strong>.</p>
         </div>
@@ -41,11 +41,11 @@
             <div class='step' data-step='1'>
                 <p class="title-estadisticas">¿Cuántas votaciones por unanimidad?</p>
 
-                <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">274 votaciones</span>, de las cuales un <span class="font-w8">37.59%</span> se han votado por unanimidad.</p>
+                <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">323 votaciones</span>, de las cuales, <span class="font-w8">181</span> se han votado por unanimidad.</p>
             </div>
             <div class='step' data-step='2'>
                 <p class="title-estadisticas">Los tripartitos del pleno</p>
-                <p>El <span class="font-w8">tripartito</span> es una expresión que se ha utilizado asiduamente en <span class="font-w8">Zaragoza</span> a lo largo de los años.</p>
+                <p>El <span class="font-w8">tripartito</span> es una expresión que se ha utilizado en <span class="font-w8">Zaragoza</span> a lo largo de los años.</p>
                 <p>El tripartito compuesto por <span class="font-w8">PP, PSOE y C'S</span> se alza con el primer puesto con un <span class="font-w8"> 55 votaciones.</span></p> <p>En segundo lugar el tripartito compuesto por <span class="font-w8">ZEC, PSOE y CHA</span> con <span class="font-w8">53 votaciones</span>.</p>
             </div>
             <div class='step' data-step='3'>
@@ -54,7 +54,7 @@
             </div>
             <div class='step' data-step='4'>
                 <p class="title-estadisticas">¿Quién se ha abstenido más?</p>
-                <p>La abstención la lidera <span class="font-w8">ZEC</span> con 56.</span></p><p>En segundo lugar es para <span class="font-w8">C'S</span> con 45.<p>En tercer lugar <span class="font-w8">CHA</span> con 44.</p><p> En cuarto lugar es para el <span class="font-w8">PP</span> con 37.</p><p> En quinto lugar el <span class="font-w8">PSOE</span> con 24.</p>
+                <p>En primer lugar <span class="font-w8">ZEC</span> con 56.</span></p><p>En segundo lugar <span class="font-w8">C'S</span> con 45.<p>En tercer lugar <span class="font-w8">CHA</span> con 44.</p><p> En cuarto lugar el <span class="font-w8">PP</span> con 37.</p><p> En quinto lugar el <span class="font-w8">PSOE</span> con 24.</p>
             </div>
             <div class='step' data-step='5'>
                 <p class="title-estadisticas">¿Quién vota más en contra?</p>
