--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
                     </form>
                 </div>
             </div>
-            <div class="nav-grid-second display-n display-ib--m">
+            <div class="nav-grid-second display-ib--m">
                 <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline pink vertical-am display-ib font-s font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
             </div>
         </nav>
