--- a/estadisticas.html
+++ b/estadisticas.html
@@ -17,7 +17,7 @@
                 <a href="http://bislai.co" class="textd-n white font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
             BISLAI
             </a>
-                <div class="nav-grid-second display-n display-ib--m">
+                <div class="nav-grid-second display-ib--m">
                     <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline white vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
                     <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline white vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/partidos">PARTIDOS</a>
                 </div>
